--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -4,14 +4,14 @@ ul.products{
     padding: 10px;
 }
  
-    ul.products li a{
+    ul.products li{
         background: #eeeeee;
         border: 1px solid #d3d3d3;
         padding: 5px 5px 5px 5px;
         width: 200px;
         text-align: center;
         float: left;
-         display: inline-block;
+        display: inline-block;
         margin-right: 10px; 
         margin-bottom: 10px;
     }
@@ -42,6 +42,11 @@ ul.products{
     }
      
     ul.products form input[type=text]{
+        width: 18px;
+        background: #FFF;
+        border: 1px solid #d3d3d3;
+    }
+    ul.products form button{
         width: 18px;
         background: #FFF;
         border: 1px solid #d3d3d3;
@@ -89,4 +94,12 @@ ul.products{
     color: #ffffff;
     background-color: #3C8DBC;
     font-weight: bold;
+}
+
+.ribbon-green1 {
+  font: bold 15px Sans-Serif;
+  text-align: center;
+  padding: 5px;
+  width: 50px;
+  background-color: #BFDC7A;
 }
