--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -4,6 +4,13 @@
 <section class="content">
   <div class="row">
     <div class="col-md-6">
+       <div class="row">
+          <div class="col-xs-3">
+             <label for="tableno">Table #</label>
+            <input type="text" class="form-control" ng:model="tblno" placeholder="">
+          </div>
+        </div>
+        <br>
         <div class="row">
           <nav class="navbar navbar-collapse collapse" role="navigation">
             <ul class="nav navmenu-nav">
@@ -16,10 +23,11 @@
         <div class="row">
             <ul class="products">  
               <li ng-repeat="item in sd">  
-                <a href="" ng-click="addCart(item.id)"><h3>{{item.product_name}}</h3>
-                <img src="" alt="" /> 
-                <span class="glyphicon glyphicon-search"></span> 
-                <small>RWF  {{item.item_unit_price}}</small></a>
+                  <h3>{{item.product_name}}</h3>
+                  <small>RWF  {{item.item_unit_price}}</small>
+                  <button type="button" class="btn btn-info  btn-sm" ng-click="updateMinusCart(item.id)"><i class="fa fa-minus"></i></button>
+                  <button type="button" class="btn btn-success  btn-sm" ng-click="addCart(item.id)"><i class="fa fa-shopping-cart"></i></button>
+                  <button type="button" class="btn btn-primary btn-sm"  ng-click="updatePlusCart(item.id)"><i class="fa fa-plus"></i></button>
               </li>  
             </ul>
         </div>
@@ -43,12 +51,11 @@
               <div class="mailbox-controls">
                 <!-- Check all button -->
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-sm"><a href ng:click="removeSelectedRows()"><i class="fa fa-trash-o"></i></a></button>
-                  <button type="button" class="btn btn-default btn-sm"><i class="fa fa-reply"></i></button>
-                  <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i></button>
+                  <button type="button" class="btn btn-default btn-sm" ng:click="removeAll()"><i class="fa fa-trash-o"></i></button>
+                  <button type="button" class="btn btn-default btn-sm" ng:click="clear()"><i class="fa fa-refresh"></i></button>
                 </div>
                 <!-- /.btn-group -->
-                <button type="button" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></button>
+                
 
                 <div class="pull-right">
                   {{currentPage + 1}}/{{numberOfPages()}}
@@ -68,6 +75,7 @@
                     <th>Price Unit</th>
                     <th>Quantity</th>
                     <th>Total</th>
+                    <th>Table #</th>
                     <th><i class="fa fa-trash-o"></i></th>
                   </tr>
                 <tbody>
@@ -77,7 +85,8 @@
                     <td class="mailbox-name">{{pitem.cost | currency}}</td>
                     <td class="mailbox-attachment"><input type="number" ng:model="pitem.qty" ng:required class="input-mini" min=1></td>
                     <td class="mailbox-date">{{pitem.qty * pitem.cost | currency}}</td>
-                    <td class="mailbox-star"><a href ng:click="removeItem($index)"><i class="fa fa-trash-o"></i></a></td>
+                    <td class="mailbox-date"> <small class="label pull-right bg-blue">{{pitem.tblno}}</small></td>
+                    <td class="mailbox-star"><a href ng:click="removeItem($index)"><i class="fa fa-trash-o"></i></a></td> 
                   </tr>
                 </tbody>
                 </table>
